Start on rearranging data

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 
 4.Shiny.md
+
+3.Rearranging.Data-figure/unnamed-chunk-2-1.png
+
+3.Rearranging.Data-figure/unnamed-chunk-3-1.png
+
+3.Rearranging.Data-figure/unnamed-chunk-5-1.png
+
+3.Rearranging.Data-figure/unnamed-chunk-6-1.png
+
+3.Rearranging.Data.md
