--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
+*.md
+3.Rearranging.Data-figure/*
+4.Advanced.Plots-figure/*
 
-4.Shiny.md
-
-3.Rearranging.Data-figure/unnamed-chunk-2-1.png
-
-3.Rearranging.Data-figure/unnamed-chunk-3-1.png
-
-3.Rearranging.Data-figure/unnamed-chunk-5-1.png
-
-3.Rearranging.Data-figure/unnamed-chunk-6-1.png
-
-3.Rearranging.Data.md
 .Rproj.user
